lägg till container

--- a/src/index.html
+++ b/src/index.html
@@ -11,45 +11,46 @@
 </head>
 
 <body>
+    <div class="container">
+        <!--  header start  -->
+        <header>
+            <nav>
+                <ul>
+                    <li><a class="current" href="index.html">Startsida</a></li>
+                    <li><a href="menu.html">Meny</a></li>
+                    <li><a href="index.html"><img src="images/logo.png" alt="Logga Gelato Spot"></a></li>
+                    <li><a href="about.html">Om Oss</a></li>
+                    <li><a href="about.html">Kontakt</a></li>
+                </ul>
+            </nav>
+        </header>
+        <!--  header end  -->
 
-    <!--  header start  -->
-    <header>
-        <nav>
-            <ul>
-                <li><a class="current" href="index.html">Startsida</a></li>
-                <li><a href="menu.html">Meny</a></li>
-                <li><a href="index.html"><img src="images/logo.png" alt="Logga Gelato Spot"></a></li>
-                <li><a href="about.html">Om Oss</a></li>
-                <li><a href="about.html">Kontakt</a></li>
-            </ul>
-        </nav>
-    </header>
-    <!--  header end  -->
+        <!--  footer start  -->
+        <footer>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Startsida</a></li>
+                    <li><a href="menu.html">Meny</a></li>
+                    <li><a href="about.html">Om Oss</a></li>
+                    <li><a href="about.html">Kontakt</a></li>
+                </ul>
+            </nav>
 
-    <!--  footer start  -->
-    <footer>
-        <nav>
-            <ul>
-                <li><a href="index.html">Startsida</a></li>
-                <li><a href="menu.html">Meny</a></li>
-                <li><a href="about.html">Om Oss</a></li>
-                <li><a href="about.html">Kontakt</a></li>
-            </ul>
-        </nav>
+            <section>
+                <h3>Följ oss på våra sociala kanaler:</h3>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-square-facebook"></i>
+                <i class="fa-brands fa-square-snapchat"></i>
+            </section>
 
-        <section>
-            <h3>Följ oss på våra sociala kanaler:</h3>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-square-facebook"></i>
-            <i class="fa-brands fa-square-snapchat"></i>
-        </section>
+            <div>
+                <a href="login.html">Personalingång</a>
+            </div>
 
-        <div>
-            <a href="login.html">Personalingång</a>
-        </div>
-
-    </footer>
-    <!--  footer end  -->
+        </footer>
+        <!--  footer end  -->
+    </div>
 </body>
 
 </html>
