--- a/src/login.html
+++ b/src/login.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-
+    <div class="container">
     <!--  header start  -->
     <header>
         <nav>
@@ -50,6 +50,7 @@
 
     </footer>
     <!--  footer end  -->
+      </div>
 </body>
 
 </html>
