--- a/src/staffsite.html
+++ b/src/staffsite.html
@@ -7,20 +7,11 @@
     <script type="module" src="js/app.js"></script>
     <script src="https://kit.fontawesome.com/3eb7cd521d.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/favicon" href="images/favicon.ico">
-    <title><!DOCTYPE html>
-<html lang="Sv">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="module" src="js/app.js"></script>
-    <script src="https://kit.fontawesome.com/3eb7cd521d.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/favicon" href="images/favicon.ico">
     <title>Personalingång</title>
 </head>
 
 <body>
-
+    <div class="container">
     <!--  header start  -->
     <header>
         <nav>
@@ -104,6 +95,7 @@
 
     </footer>
     <!--  footer end  -->
+      </div>
 </body>
 
 </html>
