--- a/src/update_menu.html
+++ b/src/update_menu.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-
+    <div class="container">
     <!--  header start  -->
     <header>
         <nav>
@@ -95,6 +95,7 @@
 
     </footer>
     <!--  footer end  -->
+      </div>
 </body>
 
 </html>
