lägg till huvudinnehåll till startsida

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,65 @@
         </header>
         <!--  header end  -->
 
+        <!-- main start -->
+        <main>
+
+            <section class="hero-img">
+                <h1>välkommen till gelato spot
+                    hemmagjort gelato i toppklass
+                </h1>
+            </section>
+
+            <section>
+                <img src="images/gelato_cone.png" alt="glass i strut">
+                <h2>Varför vår gelato is the shit:</h2>
+                <ul>
+                    <li>Gjort på äkta råvaror - inga tillsatser eller konstigheter</li>
+                    <li>Vi använder lokala och ekologiska ingredienser</li>
+                    <li>Vi har veganska och laktosfria alternativ för alla gelato-lovers där ute</li>
+                    <li>Vi tillverkar vår gelato i små batcher för att alltid kunna garantera
+                        att din gelato är helt färsk! </li>
+                    <li>Smakkombinationerna är to die for</li>
+                    <li>Vi älskar det vi gör och vi gör det med kärlek </li>
+                </ul>
+            </section>
+
+            <section>
+                <h2>Vad tycker våra kunder?</h2>
+                <p>Lämna en recension</p>
+                <div id="comment"></div>
+
+                <form method="post">
+
+                    <div>
+                        <label for="name">Namn:</label> <br>
+                        <input type="text" name="name" id="name">
+                    </div>
+
+                    <div>
+                        <label for="rating">Betyg:</label> <br>
+                        <select name="rating" id="rating">
+                            <option value="5">⭐️⭐️⭐️⭐️⭐️</option>
+                            <option value="4">⭐️⭐️⭐️⭐️</option>
+                            <option value="3">⭐️⭐️⭐️</option>
+                            <option value="2">⭐️⭐️</option>
+                            <option value="1">⭐️</option>
+                        </select>
+                    </div>
+
+                    <div>
+                        <label for="recension">Recension:</label><br>
+                        <textarea name="recension" id="recension" rows="10"></textarea>
+                    </div>
+                    
+                    <button type="submit">Skicka</button>
+
+                </form>
+
+            </section>
+        </main>
+        <!-- main end -->
+
         <!--  footer start  -->
         <footer>
             <nav>
