addera html-kod

--- a/src/about.html
+++ b/src/about.html
@@ -12,45 +12,63 @@
 
 <body>
     <div class="container">
-    <!--  header start  -->
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Startsida</a></li>
-                <li><a href="menu.html">Meny</a></li>
-                <li><a href="index.html"><img src="images/logo.png" alt="Logga Gelato Spot"></a></li>
-                <li><a class="current" href="about.html">Om Oss</a></li>
-                <li><a href="about.html">Kontakt</a></li>
-            </ul>
-        </nav>
-    </header>
-    <!--  header end  -->
+        <!--  header start  -->
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Startsida</a></li>
+                    <li><a href="menu.html">Meny</a></li>
+                    <li><a href="index.html"><img src="images/logo.png" alt="Logga Gelato Spot"></a></li>
+                    <li><a class="current" href="about.html">Om Oss</a></li>
+                    <li><a href="about.html">Kontakt</a></li>
+                </ul>
+            </nav>
+        </header>
+        <!--  header end  -->
 
-    <!--  footer start  -->
-    <footer>
-        <nav>
-            <ul>
-                <li><a href="index.html">Startsida</a></li>
-                <li><a href="menu.html">Meny</a></li>
-                <li><a href="about.html">Om Oss</a></li>
-                <li><a href="about.html">Kontakt</a></li>
-            </ul>
-        </nav>
+        <!-- main start -->
+        <main>
+            <h1>Om Oss</h1>
+            <div>
+                <p>Vårat mission är enkelt: att göra riktigt god gelato från grunden med äkta råvaror, italiensk
+                    tradition och en nypa kreativitet.</p>
+                <p>Hos oss hittar du både klassiska smaker och oväntade kombinationer, alltid tillverkade i små satser
+                    för bästa smak och färskhet. Vi älskar att experimentera med lokala ingredienser och följa säsongens
+                    smaker.</p>
+                <p>Oavsett om du är ute efter något nytt, något veganskt eller bara något riktigt gott så finns vi här
+                    med öppna armar och frusen perfektion.</p>
+            </div>
+            <div>
+                <img src="images/gelato_cup.png" alt="Glass i bägare">
+            </div>
+        </main>
+        <!-- main end -->
 
-        <section>
-            <h3>Följ oss på våra sociala kanaler:</h3>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-square-facebook"></i>
-            <i class="fa-brands fa-square-snapchat"></i>
-        </section>
+        <!--  footer start  -->
+        <footer>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Startsida</a></li>
+                    <li><a href="menu.html">Meny</a></li>
+                    <li><a href="about.html">Om Oss</a></li>
+                    <li><a href="about.html">Kontakt</a></li>
+                </ul>
+            </nav>
 
-        <div>
-            <a href="login.html">Personalingång</a>
-        </div>
+            <section>
+                <h3>Följ oss på våra sociala kanaler:</h3>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-square-facebook"></i>
+                <i class="fa-brands fa-square-snapchat"></i>
+            </section>
 
-    </footer>
-    <!--  footer end  -->
-      </div>
+            <div>
+                <a href="login.html">Personalingång</a>
+            </div>
+
+        </footer>
+        <!--  footer end  -->
+    </div>
 </body>
 
 </html>
