addera html med main-innehåll

--- a/src/login.html
+++ b/src/login.html
@@ -12,45 +12,56 @@
 
 <body>
     <div class="container">
-    <!--  header start  -->
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Startsida</a></li>
-                <li><a href="menu.html">Meny</a></li>
-                <li><a href="index.html"><img src="images/logo.png" alt="Logga Gelato Spot"></a></li>
-                <li><a href="about.html">Om Oss</a></li>
-                <li><a href="about.html">Kontakt</a></li>
-            </ul>
-        </nav>
-    </header>
-    <!--  header end  -->
+        <!--  header start  -->
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Startsida</a></li>
+                    <li><a href="menu.html">Meny</a></li>
+                    <li><a href="index.html"><img src="images/logo.png" alt="Logga Gelato Spot"></a></li>
+                    <li><a href="about.html">Om Oss</a></li>
+                    <li><a href="about.html">Kontakt</a></li>
+                </ul>
+            </nav>
+        </header>
+        <!--  header end  -->
+        <!--  main start  -->
+        <main>
+            <h1>Logga in</h1>
+            <form method="post">
+                <label for="username">Användarnamn:</label><br>
+                <input type="text" name="username" id="username"><br>
+                <label for="password">Lösenord:</label><br>
+                <input type="text" name="password" id="password"><br>
+            </form>
+        </main>
+        <!--  main end  -->
 
-    <!--  footer start  -->
-    <footer>
-        <nav>
-            <ul>
-                <li><a href="index.html">Startsida</a></li>
-                <li><a href="menu.html">Meny</a></li>
-                <li><a href="about.html">Om Oss</a></li>
-                <li><a href="about.html">Kontakt</a></li>
-            </ul>
-        </nav>
+        <!--  footer start  -->
+        <footer>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Startsida</a></li>
+                    <li><a href="menu.html">Meny</a></li>
+                    <li><a href="about.html">Om Oss</a></li>
+                    <li><a href="about.html">Kontakt</a></li>
+                </ul>
+            </nav>
 
-        <section>
-            <h3>Följ oss på våra sociala kanaler:</h3>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-square-facebook"></i>
-            <i class="fa-brands fa-square-snapchat"></i>
-        </section>
+            <section>
+                <h3>Följ oss på våra sociala kanaler:</h3>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-square-facebook"></i>
+                <i class="fa-brands fa-square-snapchat"></i>
+            </section>
 
-        <div>
-            <a href="login.html">Personalingång</a>
-        </div>
+            <div>
+                <a href="login.html">Personalingång</a>
+            </div>
 
-    </footer>
-    <!--  footer end  -->
-      </div>
+        </footer>
+        <!--  footer end  -->
+    </div>
 </body>
 
 </html>
