lägg till knapp-element

--- a/src/login.html
+++ b/src/login.html
@@ -25,6 +25,7 @@
             </nav>
         </header>
         <!--  header end  -->
+          
         <!--  main start  -->
         <main>
             <h1>Logga in</h1>
@@ -33,6 +34,7 @@
                 <input type="text" name="username" id="username"><br>
                 <label for="password">Lösenord:</label><br>
                 <input type="text" name="password" id="password"><br>
+                <button type="submit">Logga in</button>
             </form>
         </main>
         <!--  main end  -->
