--- a/src/update_com.html
+++ b/src/update_com.html
@@ -12,47 +12,48 @@
 
 <body>
     <div class="container">
-    <!--  header start  -->
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Startsida</a></li>
-                <li><a href="menu.html">Meny</a></li>
-                <li><a href="index.html"><img src="images/logo.png" alt="Logga Gelato Spot"></a></li>
-                <li><a href="about.html">Om Oss</a></li>
-                <li><a href="about.html">Kontakt</a></li>
-            </ul>
-        </nav>
-    </header>
-    <!--  header end  -->
+        <!--  header start  -->
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Startsida</a></li>
+                    <li><a href="menu.html">Meny</a></li>
+                    <li><a href="index.html"><img src="images/logo.png" alt="Logga Gelato Spot"></a></li>
+                    <li><a href="about.html">Om Oss</a></li>
+                    <li><a href="about.html">Kontakt</a></li>
+                </ul>
+            </nav>
+        </header>
+        <!--  header end  -->
 
-    <!--  footer start  -->
-    <footer>
-        <nav>
-            <ul>
-                <li><a href="index.html">Startsida</a></li>
-                <li><a href="menu.html">Meny</a></li>
-                <li><a href="about.html">Om Oss</a></li>
-                <li><a href="about.html">Kontakt</a></li>
-            </ul>
-        </nav>
+        <!--  footer start  -->
+        <footer>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Startsida</a></li>
+                    <li><a href="menu.html">Meny</a></li>
+                    <li><a href="about.html">Om Oss</a></li>
+                    <li><a href="about.html">Kontakt</a></li>
+                </ul>
+            </nav>
 
-        <section>
-            <h3>Följ oss på våra sociala kanaler:</h3>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-square-facebook"></i>
-            <i class="fa-brands fa-square-snapchat"></i>
-        </section>
+            <section>
+                <h3>Följ oss på våra sociala kanaler:</h3>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-square-facebook"></i>
+                <i class="fa-brands fa-square-snapchat"></i>
+            </section>
 
-        <div>
-            <a href="login.html">Personalingång</a>
-        </div>
+            <div>
+                <a href="login.html">Personalingång</a>
+            </div>
 
-    </footer>
-    <!--  footer end  -->
+        </footer>
+        <!--  footer end  -->
 </body>
 
-</html></title>
+</html>
+</title>
 </head>
 
 <body>
@@ -71,6 +72,27 @@
     </header>
     <!--  header end  -->
 
+    <!-- main start -->
+    <main>
+
+        <div>
+            <nav>
+                <ul>
+                    <li><a href="staffsite.html">Tillbaka</a></li>
+                </ul>
+            </nav>
+        </div>
+
+        <h1>Hantera Kommentarer</h1>
+
+        <div class="manage_com" id="comment">
+
+            <button>Ta bort</button>
+        </div>
+
+    </main>
+    <!-- main end -->
+
     <!--  footer start  -->
     <footer>
         <nav>
@@ -95,7 +117,7 @@
 
     </footer>
     <!--  footer end  -->
-      </div>
+    </div>
 </body>
 
 </html>
