--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <script type="module" src="js/app.js"></script>
     <script src="https://kit.fontawesome.com/3eb7cd521d.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/favicon" href="images/favicon.ico">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Gelato Spot</title>
 </head>
 
@@ -76,7 +77,7 @@
                         <label for="recension">Recension:</label><br>
                         <textarea name="recension" id="recension" rows="10"></textarea>
                     </div>
-                    
+
                     <button type="submit">Skicka</button>
 
                 </form>
