--- a/src/login.html
+++ b/src/login.html
@@ -7,6 +7,7 @@
     <script type="module" src="js/app.js"></script>
     <script src="https://kit.fontawesome.com/3eb7cd521d.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/favicon" href="images/favicon.ico">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Personalingång</title>
 </head>
 
@@ -25,7 +26,7 @@
             </nav>
         </header>
         <!--  header end  -->
-          
+
         <!--  main start  -->
         <main>
             <h1>Logga in</h1>
