--- a/src/staffsite.html
+++ b/src/staffsite.html
@@ -7,6 +7,7 @@
     <script type="module" src="js/app.js"></script>
     <script src="https://kit.fontawesome.com/3eb7cd521d.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/favicon" href="images/favicon.ico">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Personalingång</title>
 </head>
 
@@ -76,7 +77,7 @@
     <main>
         <h1>Välkommen</h1>
         <p>Vad vill du göra?</p>
-        
+
         <nav>
             <ul>
                 <li><a href="update_menu.html">Uppdatera meny</a></li>
