--- a/src/update_com.html
+++ b/src/update_com.html
@@ -7,6 +7,7 @@
     <script type="module" src="js/app.js"></script>
     <script src="https://kit.fontawesome.com/3eb7cd521d.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/favicon" href="images/favicon.ico">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Hantera kommentarer</title>
 </head>
 
