--- a/src/update_menu.html
+++ b/src/update_menu.html
@@ -7,6 +7,7 @@
     <script type="module" src="js/app.js"></script>
     <script src="https://kit.fontawesome.com/3eb7cd521d.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/favicon" href="images/favicon.ico">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Hantera Meny</title>
 </head>
 
@@ -107,7 +108,7 @@
                     <button>Ta bort</button>
                     <button>Uppdatera</button>
                 </div>
-                
+
             </section>
 
         </main>
