placera huvudinehåll inom atricle

--- a/src/about.html
+++ b/src/about.html
@@ -29,16 +29,21 @@
 
         <!-- main start -->
         <main>
-            <h1>Om Oss</h1>
-            <div>
-                <p>Vårat mission är enkelt: att göra riktigt god gelato från grunden med äkta råvaror, italiensk
-                    tradition och en nypa kreativitet.</p>
-                <p>Hos oss hittar du både klassiska smaker och oväntade kombinationer, alltid tillverkade i små satser
-                    för bästa smak och färskhet. Vi älskar att experimentera med lokala ingredienser och följa säsongens
-                    smaker.</p>
-                <p>Oavsett om du är ute efter något nytt, något veganskt eller bara något riktigt gott så finns vi här
-                    med öppna armar och frusen perfektion.</p>
-            </div>
+            <article>
+                <h1>Om Oss</h1>
+                <div>
+                    <p>Vårat mission är enkelt: att göra riktigt god gelato från grunden med äkta råvaror, italiensk
+                        tradition och en nypa kreativitet.</p>
+                    <p>Hos oss hittar du både klassiska smaker och oväntade kombinationer, alltid tillverkade i små
+                        satser
+                        för bästa smak och färskhet. Vi älskar att experimentera med lokala ingredienser och följa
+                        säsongens
+                        smaker.</p>
+                    <p>Oavsett om du är ute efter något nytt, något veganskt eller bara något riktigt gott så finns vi
+                        här
+                        med öppna armar och frusen perfektion.</p>
+                </div>
+            </article>
             <div>
                 <img src="images/gelato_cup.png" alt="Glass i bägare">
             </div>
