--- a/src/menu.html
+++ b/src/menu.html
@@ -15,15 +15,25 @@
     <div class="container">
         <!--  header start  -->
         <header>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Startsida</a></li>
-                    <li><a class="current" href="menu.html">Meny</a></li>
-                    <li><a href="index.html"><img src="images/logo.png" alt="Logga Gelato Spot"></a></li>
-                    <li><a href="about.html">Om Oss</a></li>
-                    <li><a href="about.html">Kontakt</a></li>
-                </ul>
-            </nav>
+            <div class="header-container">
+                <nav class="nav-left">
+                    <ul>
+                        <li><a href="index.html">Startsida</a></li>
+                        <li><a class="current" href="menu.html">Meny</a></li>
+                    </ul>
+                </nav>
+
+                <div class="logo">
+                    <a href="index.html"><img src="images/logo.png" alt="Logotyp"></a>
+                </div>
+
+                <nav class="nav-right">
+                    <ul>
+                        <li><a href="about.html">Om Oss</a></li>
+                        <li><a href="about.html">Kontakt</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
         <!--  header end  -->
 
