Lägg till klasser i footer och css

--- a/src/update_com.html
+++ b/src/update_com.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <!--  header start  -->
-       <header>
+        <header>
             <div class="header-container">
                 <nav class="nav-left">
                     <ul>
@@ -39,12 +39,12 @@
 
         <!--  footer start  -->
         <footer>
-            <nav>
+            <nav class="footer-nav">
                 <ul>
-                    <li><a href="index.html">Startsida</a></li>
-                    <li><a href="menu.html">Meny</a></li>
-                    <li><a href="about.html">Om Oss</a></li>
-                    <li><a href="about.html">Kontakt</a></li>
+                    <li><a href="index.html">startsida</a></li>
+                    <li><a href="menu.html">meny</a></li>
+                    <li><a href="about.html">om oss</a></li>
+                    <li><a href="about.html">kontakt</a></li>
                 </ul>
             </nav>
 
@@ -56,7 +56,7 @@
             </section>
 
             <div>
-                <a href="login.html">Personalingång</a>
+                <a class="admin-link" href="login.html">Personalingång</a>
             </div>
 
         </footer>
