lagt till div för hero-bild och stilar

--- a/src/index.html
+++ b/src/index.html
@@ -40,11 +40,9 @@
         <!-- main start -->
         <main>
 
-            <section class="hero-img">
-                <h1>välkommen till gelato spot
-                    hemmagjort gelato i toppklass
-                </h1>
-            </section>
+            <div class="hero-img">
+           <img src="images/hero-img.webp" alt="">
+            </div>
 
             <section>
                 <img src="images/gelato_cone.png" alt="glass i strut">
