--- a/src/menu.html
+++ b/src/menu.html
@@ -39,19 +39,25 @@
 
         <!--  main start  -->
         <main>
-            <section class="menu_container">
-                <h1>Meny</h1>
+            <section>
 
-                <div id="menu_gelato">
-                    <h2>Gelato</h2>
-                </div>
+                <div class="menu-container">
+                    <h1>Meny</h1>
+                    <div class="menu-list">
 
-                <div id="menu_topping">
-                    <h2>Toppings</h2>
-                </div>
+                        <div id="menu-gelato">
+                            <h2>Gelato</h2>
+                        </div>
 
-                <div id="menu_drink">
-                    <h2>Dryck</h2>
+                        <div id="menu_topping">
+                            <h2>Toppings</h2>
+                        </div>
+
+                        <div id="menu-drink">
+                            <h2>Dryck</h2>
+                        </div>
+                    </div>
+
                 </div>
             </section>
 
