Anpassa html och lägg till css på about

--- a/src/about.html
+++ b/src/about.html
@@ -38,10 +38,15 @@
         <!--  header end  -->
 
         <!-- main start -->
-        <main>
-            <article>
-                <h1>Om Oss</h1>
+        <main class="about-main">
+            <h1>Om Oss</h1>
+            <div class="about-container">
+
                 <div>
+                    <img src="images/gelato_cup.png" alt="Glass i bägare">
+                </div>
+                <article>
+                    <h2>Vilka är vi?</h2>
                     <p>Vårat mission är enkelt: att göra riktigt god gelato från grunden med äkta råvaror, italiensk
                         tradition och en nypa kreativitet.</p>
                     <p>Hos oss hittar du både klassiska smaker och oväntade kombinationer, alltid tillverkade i små
@@ -52,10 +57,8 @@
                     <p>Oavsett om du är ute efter något nytt, något veganskt eller bara något riktigt gott så finns vi
                         här
                         med öppna armar och frusen perfektion.</p>
-                </div>
-            </article>
-            <div>
-                <img src="images/gelato_cup.png" alt="Glass i bägare">
+                </article>
+
             </div>
         </main>
         <!-- main end -->
