Anpassa html och lägg på stilar på login

--- a/src/login.html
+++ b/src/login.html
@@ -38,7 +38,7 @@
         <!--  header end  -->
 
         <!--  main start  -->
-        <main>
+        <main class="login-form">
             <h1>Logga in</h1>
             <form method="post">
                 <label for="username">Användarnamn:</label><br>
