--- a/src/login.html
+++ b/src/login.html
@@ -47,6 +47,9 @@
                 <input type="text" name="password" id="password"><br>
                 <button type="submit">Logga in</button>
             </form>
+
+            <a href="staffsite.html">Länk</a>
+
         </main>
         <!--  main end  -->
 
