Lägg till html för huvudinnehåll till staffsite

--- a/src/staffsite.html
+++ b/src/staffsite.html
@@ -35,7 +35,20 @@
                 </nav>
             </div>
         </header>
-        <!--  header end  -->
+        <!-- header end -->
+
+        <!-- main start -->
+        <main>
+            <h1>Välkommen</h1>
+            <p>Vad vill du göra?</p>
+
+            <div class="buttons">
+                <a href="update_menu.html">Uppdatera meny</a>
+                <a href="update_com.html">Hantera kommentarer</a>
+            </div>
+
+        </main>
+        <!-- main end -->
 
         <!--  footer start  -->
         <footer>
@@ -61,68 +74,6 @@
 
         </footer>
         <!--  footer end  -->
-</body>
-
-</html>
-</title>
-</head>
-
-<body>
-
-    <!--  header start  -->
-    <header>
-        <nav>
-            <ul>
-                <li><a class="current" href="index.html">Startsida</a></li>
-                <li><a href="menu.html">Meny</a></li>
-                <li><a href="index.html"><img src="images/logo.png" alt="Logga Gelato Spot"></a></li>
-                <li><a href="about.html">Om Oss</a></li>
-                <li><a href="about.html">Kontakt</a></li>
-            </ul>
-        </nav>
-    </header>
-    <!--  header end  -->
-
-    <!--  main start  -->
-    <main>
-        <h1>Välkommen</h1>
-        <p>Vad vill du göra?</p>
-
-        <nav>
-            <ul>
-                <li><a href="update_menu.html">Uppdatera meny</a></li>
-                <li><a href="update_com.html">Hantera kommentarer</a></li>
-            </ul>
-        </nav>
-
-    </main>
-    <!--  main end  -->
-
-    <!--  footer start  -->
-    <footer>
-        <nav class="footer-nav">
-            <ul>
-                <li><a href="index.html">startsida</a></li>
-                <li><a href="menu.html">meny</a></li>
-                <li><a href="about.html">om oss</a></li>
-                <li><a href="about.html">kontakt</a></li>
-            </ul>
-        </nav>
-
-        <section>
-            <h3>Följ oss på våra sociala kanaler:</h3>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-square-facebook"></i>
-            <i class="fa-brands fa-square-snapchat"></i>
-        </section>
-
-        <div>
-            <a class="admin-link" href="login.html">Personalingång</a>
-        </div>
-
-    </footer>
-    <!--  footer end  -->
-    </div>
 </body>
 
 </html>
